--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ModernCorp - Transform Your Digital Future</title>
-    <meta name="description" content="AI-powered solutions, secure finance technology, and creative strategy to elevate your business" />
-    <meta name="author" content="ModernCorp" />
+    <title>ClosedLoop - Entertainment & Artist Management</title>
+    <meta name="description" content="Entertainment powerhouse and artist management agency dedicated to elevating tomorrow's stars. From visionary amateurs to world-class performers." />
+    <meta name="author" content="ClosedLoop" />
 
-    <meta property="og:title" content="ModernCorp - Transform Your Digital Future" />
-    <meta property="og:description" content="AI-powered solutions, secure finance technology, and creative strategy to elevate your business" />
+    <link rel="icon" type="image/png" href="/Blue Logo no bg.png" />
+
+    <meta property="og:title" content="ClosedLoop - Entertainment & Artist Management" />
+    <meta property="og:description" content="Entertainment powerhouse and artist management agency dedicated to elevating tomorrow's stars. From visionary amateurs to world-class performers." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/Blue Logo no bg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@moderncorp" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@closedloop" />
+    <meta name="twitter:image" content="/Blue Logo no bg.png" />
   </head>
 
   <body>
